# config-review-workbench

./: .config-review-context.yaml  .config-review.yaml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  build.py  pyproject.toml  requirements-dev.txt  ruff.toml
.github/workflows/: ci.yml  codeql.yml
docs/: SECURITY_AND_CODE_QUALITY.md  context-helper.md  diff-engine.md  filter-discovery.md  reports-and-git-context.md  web-diff-viewer.md
examples/demo-project/dev/config/: app.yaml
examples/demo-project/test/config/: app.yaml
scripts/: check_project.py
src/config_review/: __init__.py  cli.py  context_catalog.yaml  context_help.py  core.py  plain.py  rendering.py  self_test.py  tui.py  web_view.py  workbench.py
tests/: test_context_help.py  test_first_run.py  test_git_links.py  test_intraline_diff.py  test_keyed_list_diff.py  test_quick_review_defaults.py  test_report_and_git_status.py  test_smoke.py  test_web_line_order.py  test_web_view.py
