[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "config-review-workbench"
version = "1.0.0"
description = "Interactive source-to-target configuration review workbench"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["ruamel.yaml>=0.17"]

[project.scripts]
config-review = "config_review.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
respect-gitignore = true
extend-exclude = [
  ".venv",
  "build",
  "dist",
  "vendor",
  ".pytest_cache",
  ".ruff_cache",
]

[tool.ruff.lint]
# Start with Ruff's stable, low-noise correctness rules:
# syntax errors, undefined names, unused imports, and similar defects.
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
line-ending = "lf"
